# brave-extension

./: .gitignore  .travis.yml  BUILD.gn  README.md  manifest.json  package-lock.json  package.json
app/: background.js  content.ts  manifest.dev.json  manifest.prod.json
app/_locales/en_US/: messages.json
app/actions/: shieldsPanelActions.ts
app/assets/js/: extensions_inject.js  settings_inject.js
app/background/api/: shieldsAPI.js  shieldsAPI.ts
app/background/events/: cosmeticFilterEvents.ts
app/background/reducers/: shieldsPanelReducer.ts
app/components/braveShields/: braveShields.tsx  braveShieldsControls.tsx  footer.tsx  header.tsx  interfaceControls.tsx  privacyControls.tsx  securityControls.tsx
app/constants/: resourceIdentifiers.js  shieldsPanelTypes.ts
app/helpers/: shieldsUtils.ts
app/state/: shieldsPanelState.ts
app/types/actions/: shieldsPanelActions.ts
app/types/constants/: shieldsPanelTypes.ts
app/types/other/: blockTypes.ts
app/types/state/: shieldsPannelState.ts
app/views/: background.pug  braveShieldsPanel.pug  inject.pug
py-scripts/: build-brave-extension.py
py-scripts/lib/: util.py
resources/: BUILD.gn  brave_extension.grd
scripts/: build.js  dev.js  tasks.js
test/: jest.config.json  setupApp.ts  testData.ts
test/app/actions/: shieldsPanelActionsTest.ts  webNavigationActionsTest.ts
test/app/background/: reducersTest.ts  storeTest.ts
test/app/background/api/: browserActionAPITest.ts  cosmeticFilterAPITest.ts  localeAPITest.ts  shieldsAPITest.ts  tabsAPITest.ts
test/app/background/events/: runtimeEventsTest.ts  shieldsEventsTest.ts  tabsEventsTest.ts  windowsEventsTest.ts
test/app/background/reducers/: cosmeticFilterReducerTest.ts  shieldsPanelReducerTest.ts
test/app/components/braveShields/: braveShieldsControlsTest.tsx  footerTest.tsx  headerTest.tsx  interfaceControlsTest.tsx  privacyControlsTest.tsx  securityControlsTest.tsx
test/app/helpers/: urlUtilsTest.ts
test/app/state/: shieldsPanelStateTest.ts
test/background/: reducersTest.ts  storeTest.ts
test/background/api/: shieldsAPITest.ts
test/background/events/: runtimeEventsTest.ts  shieldsEventsTest.ts
test/background/reducers/: cosmeticFilterReducerTest.ts  shieldsPanelReducerTest.ts
test/e2e/: braveShieldsPanel.ts
webpack/: dev.config.js  prod.config.js
